[package]
name = "webgame"
version = "0.1.0"
authors = ["Paul Warner <paul.eliot.warner@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rusqlite = "0.14.0"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["tera_templates", "json", "sqlite_pool"]